# LLP_lab3

./: CMakeCache.txt  CMakeLists.txt  README.md  build.sh  file.txt  server.c
db/: Makefile-win  out.txt
db/src/: initializer.c
db/src/filetools/: basic_file_manager.c  big_data_tools.c  big_data_tools.h
db/src/interface/: basic_crud.c  basic_crud.h  crud_interface.c  crud_interface.h
db/src/interface/include/: crud_interface.h
db/src/ui/: interactive.c  interactive.h
db/src/ui/commands/: add_command.c  add_command.h  find_by_command.c  find_by_command.h  help_command.c  help_command.h  update_command.c  update_command.h
db/src/ui/commands/include/: add_command.h
db/src/ui/commands/tools/: string_tools.h
parser/: common.c  mongo.y  signatures.h  y.tab.c  y.tab.h
parser/include/: mongo.h
proto/: message.options  message.pb.c  message.pb.h  message.proto
proto/nanopb/: CMakeCache.txt  pb.h
